{
    "name": "CustomInput",
    "maps": [
        {
            "name": "Camera",
            "id": "16b1eb83-d234-40b6-af65-d53fb4ba2b1b",
            "actions": [
                {
                    "name": "Pan",
                    "type": "PassThrough",
                    "id": "f8208d3c-dc61-412a-bb8f-e17316c92c34",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "0d11fc90-fa52-4157-8a44-de81983bb116",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db58c264-a683-4aaf-b212-3fde1ec7f951",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f0e8454-aeef-4c56-b76e-ab63e8861f65",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Invert,Normalize(min=-1,max=1)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gameplay",
            "id": "313590e1-99c3-4289-96f7-7b9945bb8b84",
            "actions": [
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "4e66f5bf-1e82-477d-a945-9ea5f28e306b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8196dc4b-e4a7-4a85-9789-509def39318b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "NodeUI",
            "id": "1fb9f95f-61f1-49fb-be07-f832c5653677",
            "actions": [
                {
                    "name": "CancelNodeSelection",
                    "type": "Button",
                    "id": "569a098b-afd1-4227-a9e6-a8619ad4f0e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ece36f5-12dc-4571-85c3-887f100350f6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelNodeSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}